--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,21 @@
 
 @layer base {
   :root {
-    --background: 300, 10%, 88%;
+    --background: 300, 10%, 88%; /*Pinkish white*/
     --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
+    --card: 0 0% 100%; /*White*/
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 159, 20%, 42%;
+    --primary: 159, 20%, 42%; /*Green*/
     --primary-foreground: 0 0% 98%;
-    --secondary: 0, 0%, 0%;
+    --secondary: 0, 0%, 0%; /*Black*/
     --secondary-foreground: 300, 10%, 88%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
+    --accent: 164, 22%, 80%;
+    --accent-foreground: 0, 0%, 0%;
+    --destructive: 352, 70%, 50%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
@@ -65,4 +65,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.AccordionTrigger:hover {
+	background-color: black;
 }
