--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 300, 10%, 88%; /*Pinkish white*/
+    --background: 164, 22%, 80%; /*Pinkish white*/
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%; /*White*/
     --card-foreground: 0 0% 3.9%;
@@ -12,11 +12,11 @@
     --popover-foreground: 0 0% 3.9%;
     --primary: 159, 20%, 42%; /*Green*/
     --primary-foreground: 0 0% 98%;
-    --secondary: 0, 0%, 0%; /*Black*/
+    --secondary: 158, 20%, 19%; /*Black*/
     --secondary-foreground: 300, 10%, 88%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 164, 22%, 80%;
+    --accent: 0 0% 100%;
     --accent-foreground: 0, 0%, 0%;
     --destructive: 352, 70%, 50%;
     --destructive-foreground: 0 0% 98%;
