--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,12 @@
     --secondary-foreground: 300, 10%, 88%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 100%;
+    --accent: 164, 22%, 80%;
     --accent-foreground: 0, 0%, 0%;
     --destructive: 352, 70%, 50%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
+    --input: 0 0% 100%;
     --ring: 0 0% 3.9%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
